--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,17 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<% provide(:title, 'About Us') %>
+<h1>About Us</h1>
+<p>
+	We are a team brought together by a shared vision of making learning a seamless and fulfilling experience. We are trying to personalize the learning experience by leveraging technology thus enabling learners to identify their weaknesses and harness their strengths. We also understand that each learner requires a tailor-made learning experience to suit their pace.
+</p>
+<p>
+	Pooling in our varied experiences, we aspire to create a platform enabling students to connect with similar minded peers for sharing knowledge which essentially gets lost in the current system of isolated learning. Keeping ourselves updated to the current research in the field of education technology, our philosophy is to make learning as interesting, engaging and interactive as possible.
+</p>
+<p>
+	We encourage learners to think and explore, and in the process inculcate a self-driven enthusiasm to learn more and make the process satisfying and sustainable.
+</p>
+<p>
+	We aspire to create life-long learners because when you think, you learn and then you grow.
+</p>
+<p>
+	This is a beta site for testing. Complete site will be launched soon. We request the learners to provide their valuable feedback in order to make their experience better. Thanks.
+</p>
