--- a/app/views/static_pages/terms.html.erb
+++ b/app/views/static_pages/terms.html.erb
@@ -1,2 +1,85 @@
-<h1>StaticPages#terms</h1>
-<p>Find me in app/views/static_pages/terms.html.erb</p>
+<% provide(:title, 'Terms & Conditions') %>
+<h1>Terms & Conditions</h1>
+<h2>Terms and Conditions of use of TrueSchool</h2>
+<ol>
+	<li><h3>Acceptance The Use Of TrueSchool Terms and Conditions</h3></li>
+		<p>
+			Your access to and use of TrueSchool is subject exclusively to these Terms and Conditions. You will not use the Website for any purpose that is unlawful or prohibited by these Terms and Conditions. By using the Website you are fully accepting the terms, conditions and disclaimers contained in this notice. If you do not accept these Terms and Conditions you must immediately stop using the Website.
+		</p>
+
+	<li><h3>Credit card details</h3></li>
+		<p>
+			TrueSchool will never ask for Credit Card details and request that you do not enter it on any of the forms on TrueSchool.
+		</p>
+
+	<li><h3>Advice</h3></li>
+		<p>
+			The contents of TrueSchool website do not constitute advice and should not be relied upon in making or refraining from making, any decision.
+		</p>
+
+	<li><h3>Change of Use</h3>
+		<p>
+			TrueSchool reserves the right to:
+		</p>
+		<ol>
+			<li>
+				change or remove (temporarily or permanently) the Website or any part of it without notice and you confirm that TrueSchool shall not be liable to you for any such change or removal and.
+			</li>
+			<li>
+				change these Terms and Conditions at any time, and your continued use of the Website following any changes shall be deemed to be your acceptance of such change.
+			</li>
+		</ol>
+	</li>
+
+	<li><h3>Links to Third Party Websites</h3></li>
+		<p>
+			TrueSchool Website may include links to third party websites that are controlled and maintained by others. Any link to other websites is not an endorsement of such websites and you acknowledge and agree that we are not responsible for the content or availability of any such sites.
+		</p>
+
+	<li><h3>Copyright</h3></li>
+	<ol>
+			<li>
+				All copyright, trade marks and all other intellectual property rights in the Website and its content (including without limitation the Website design, text, graphics and all software and source codes connected with the Website) are owned by or licensed to TrueSchool or otherwise used by TrueSchool as permitted by law.
+			</li>
+			<li>
+				In accessing the Website you agree that you will access the content solely for your personal, non-commercial use. None of the content may be downloaded, copied, reproduced, transmitted, stored, sold or distributed without the prior written consent of the copyright holder. This excludes the downloading, copying and/or printing of pages of the Website for personal, non-commercial home use only.
+			</li>
+		</ol>
+
+	<li><h3>Disclaimers and Limitation of Liability</h3></li>
+	<ol>
+			<li>
+				The Website is provided on an AS IS and AS AVAILABLE basis without any representation or endorsement made and without warranty of any kind whether express or implied, including but not limited to the implied warranties of satisfactory quality, fitness for a particular purpose, non-infringement, compatibility, security and accuracy.
+			</li>
+			<li>
+				To the extent permitted by law, TrueSchool will not be liable for any indirect or consequential loss or damage whatever (including without limitation loss of business, opportunity, data, profits) arising out of or in connection with the use of the Website.
+			</li>
+			<li>
+				TrueSchool makes no warranty that the functionality of the Website will be uninterrupted or error free, that defects will be corrected or that the Website or the server that makes it available are free of viruses or anything else which may be harmful or destructive.
+			</li>
+			<li>
+				Nothing in these Terms and Conditions shall be construed so as to exclude or limit the liability of TrueSchool for death or personal injury as a result of the negligence of TrueSchool or that of its employees or agents.
+			</li>
+		</ol>
+
+	<li><h3>Indemnity</h3></li>
+		<p>
+			You agree to indemnify and hold TrueSchool and its employees and agents harmless from and against all liabilities, legal fees, damages, losses, costs and other expenses in relation to any claims or actions brought against TrueSchool arising out of any breach by you of these Terms and Conditions or other liabilities arising out of your use of this Website.
+		</p>
+
+	<li><h3>Severance</h3></li>
+		<p>
+			If any of these Terms and Conditions should be determined to be invalid, illegal or unenforceable for any reason by any court of competent jurisdiction then such Term or Condition shall be severed and the remaining Terms and Conditions shall survive and remain in full force and effect and continue to be binding and enforceable.
+		</p>
+
+	<li><h3>Governing Law</h3></li>
+		<p>
+			These Terms and Conditions shall be governed by and construed in accordance with the law of India and you hereby submit to the exclusive jurisdiction of the Indian courts.
+		</p>
+</ol>
+
+	<p>
+		For any further information please email-webmaster@trueschool.co.in
+	</p>
+
+
